--- a/styles.css
+++ b/styles.css
@@ -1,160 +1,120 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+
+	font-family: sans-serif;
+}
+
+button {
+	appearance: none;
+	background: none;
+	outline: none;
+	border: none;
+
+	cursor: pointer;
 }
 
 body {
-    background-image: url("background.jpeg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center; 
-    color: white;
-    font-family: "Poppins", sans-serif;
-    min-height: 100vh;
+	background-color: #242948;
+	color: #fff;
 }
 
-header {
-    font-size: 1.5rem;
+main {
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	padding: 2rem 1.5rem;
 }
 
-header, 
-form {
-    min-height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.app {
+	width: 100%;
+	max-width: 768px;
 }
 
-form input, 
-form button {
-    padding: 0.5rem;
-    padding-left: 1rem;
-    font-size: 1.8rem;
-    border: none;
-    background: white;
-    border-radius: 2rem;
+.app header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 1rem;
 }
 
-form button {
-    color: rgb(255, 200, 0);
-    background: white;
-    cursor: pointer;
-    transition: all 0.3 ease;
-    margin-left: 0.5rem;
+.app header h1 {
+	color: #fff;
+	font-size: 24px;
+	font-weight: 400;
 }
 
-form button:hover {
-    color: white;
-    background: rgb(255, 200, 0);
+.app header button {
+	color: #fff;
+	font-size: 18px;
+	border-bottom: 2px solid #fff;
+	text-transform: uppercase;
 }
 
-.fa-plus-circle {
-    margin-top: 0.3rem;
-    margin-left: -8px;
+.item {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1.5rem;
+	border-radius: 1rem;
+	background-color: #1e223d;
+	box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+	margin-bottom: 1.5rem;
 }
 
-.todo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.item:last-of-type {
+	margin-bottom: 0;
 }
 
-.todo-list {
-    min-width: 30%;
-    list-style: none;
+.item input[type="checkbox"] {
+	margin-right: 1rem;
 }
 
-.todo {
-    margin: 0.5rem;
-    padding-left: 0.5rem;
-    background: white;
-    color: black;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: 0.5s;
-    border-radius: 2rem;
+.item input[type="text"] {
+	appearance: none;
+	background: none;
+	border: none;
+	outline: none;
+	font-weight: 400;
+	color: #fff;
+	font-size: 20px;
+	flex: 1 1 0%;
+	margin-right: 1rem;
 }
 
-.todo li {
-    flex: 1;
+.item input[type="text"]:not(:disabled) {
+	border-bottom: 2px solid #fff;
 }
 
-.trash-btn, 
-.complete-btn {
-    color: white;
-    border: none;
-    padding: 1rem;
-    cursor: pointer;
-    font-size: 1.5rem;
+.item.complete {
+	opacity: 0.7;
 }
 
-.complete-btn {
-    background: rgb(255, 200, 0);
+.item.complete input[type="text"] {
+	text-decoration: line-through;
 }
 
-.trash-btn {
-    border-top-right-radius: 1.75rem;
-    border-bottom-right-radius: 1.75rem;
-    background: rgb(171, 171, 171);
+.item:hover,
+.item:focus-within {
+	outline: 2px solid #fff;
 }
 
-.todo-item {
-    padding: 0rem 0.5rem;
+.actions button {
+	color: #CCC;
+	margin-right: 1rem;
+	opacity: 0.8;
+	transform: 0.1s;
 }
 
-.fa-trash, 
-.fa-check-circle {
-    pointer-events: none;
+.actions button.remove-btn {
+	color: crimson;
 }
 
-.completed {
-    text-decoration: line-through;
-    opacity: 0.5;
+.actions button:hover {
+	opacity: 1;
 }
 
-.slide {
-    transform: translateX(10rem);
-    opacity: 0;
-}
-
-select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    outline: none;
-    border: none;
-}
-
-.select {
-    margin: 1rem;
-    position: relative;
-    overflow: hidden;
-    border-radius: 50px;
-}
-
-select {
-    color:rgb(255, 200, 0);
-    width: 10rem;
-    height: 3.2rem;
-    cursor: pointer;
-    padding: 1rem;
-}
-
-.select::after {
-    content: "\25BC";
-    position: absolute;
-    background:rgb(255, 200, 0);
-    top: 0;
-    right: 0;
-    padding: 1rem;
-    pointer-events: none;
-    transition: all 0.3s ease;
-}
-
-.select::hover::after {
-    background: white;
-    color: rgb(255, 200, 0);
+.actions button:last-of-type {
+	margin-right: 0;
 }
